--- a/index.html
+++ b/index.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-
-    <title>
-      Frontend Mentor | Huddle landing page with single introductory section
-    </title>
-
-    <!-- No dude en eliminar estos estilos o personalizarlos en su propia hoja de estilo 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
-  </head>
-  <body>
-    Build The Community Your Fans Will Love Huddle re-imagines the way we build
-    communities. You have a voice, but so does your audience. Create connections
-    with your users as you engage in genuine discussion. Register
-  </body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
+  <link rel="stylesheet" href="css/styles.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+  <title>
+    Frontend Mentor | Huddle landing page with single introductory section
+  </title>
+</head>
+<body>
+  <header class="logo">
+    <img src="images/logo.svg" alt="Logo">
+  </header>
+  <main>
+    <section class="illustration">
+      <img src="images/illustration-mockups.svg" alt="Illustration">
+    </section>
+    <section>
+      <h1>Build The Community Your Fans Will Love</h1>
+      <p>Huddle re-imagines the way we build
+          communities. You have a voice, but so does your audience. Create connections
+          with your users as you engage in genuine discussion.</p>
+      <button>Register</button>
+    </section>
+ </main>
+  <footer>
+    <ul>
+      <li>
+        <a class="facebook-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+      </li>
+      <li>
+        <a class="twitter-icon" href="#"><i class="fab fa-twitter"></i></a>
+      </li>
+      <li>
+        <a class="instagram-icon" href="#"><i class="fab fa-instagram"></i></a>
+      </li>
+    </ul>
+  </footer>
+</body>
 </html>
