--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
   <link rel="stylesheet" href="css/styles.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <title>
     Frontend Mentor | Huddle landing page with single introductory section
   </title>
@@ -16,29 +18,29 @@
     <img src="images/logo.svg" alt="Logo">
   </header>
   <main>
-    <section class="illustration">
+    <div class="main-left">
       <img src="images/illustration-mockups.svg" alt="Illustration">
-    </section>
-    <section>
-      <h1>Build The Community Your Fans Will Love</h1>
-      <p>Huddle re-imagines the way we build
-          communities. You have a voice, but so does your audience. Create connections
-          with your users as you engage in genuine discussion.</p>
-      <button>Register</button>
-    </section>
- </main>
+    </div>
+    <div class="main-right">
+      <h1>Build The Community <br> Your Fans Will Love</h1>
+      <p>Huddle re-imagines the way we build communities. You have <br> a voice, but so does your audience. Create connections with <br> your users as you engage in genuine discussion.</p>
+      <button><span class="button">Register</span></button>
+    </div>
+  </main>
   <footer>
-    <ul>
-      <li>
-        <a class="facebook-icon" href="#"><i class="fab fa-facebook-f"></i></a>
-      </li>
-      <li>
-        <a class="twitter-icon" href="#"><i class="fab fa-twitter"></i></a>
-      </li>
-      <li>
-        <a class="instagram-icon" href="#"><i class="fab fa-instagram"></i></a>
-      </li>
-    </ul>
+    <nav>
+      <ul  class="footer-right-section">
+        <li>
+          <a class="facebook-icon" href="#"><i class="icon fab fa-facebook-f"></i></a>
+        </li>
+        <li>
+          <a class="twitter-icon" href="#"><i class="icon fab fa-twitter"></i></a>
+        </li>
+        <li>
+          <a class="instagram-icon" href="#"><i class="icon fab fa-instagram"></i></a>
+        </li>
+      </ul>
+    </nav>
   </footer>
 </body>
 </html>
